<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="java.util.List" />
        <import type="com.ac.musicac.domain.AlbumView" />
        <import type="com.ac.musicac.domain.PopularArtist" />

        <variable
            name="loadingAlbums"
            type="boolean" />

        <variable
            name="loadingArtists"
            type="boolean" />

        <variable
            name="artists"
            type="List&lt;PopularArtist>" />

        <variable
            name="albums"
            type="List&lt;AlbumView>" />

        <variable
            name="releases"
            type="List&lt;AlbumView>" />

        <variable
            name="error"
            type="String" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/black"
        tools:context=".ui.main.MainFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.DarkOverlay"
            app:statusBarForeground="?attr/colorPrimaryVariant">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:title="@string/home_title"
                app:popupTheme="@style/AppTheme.DarkOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/recent_artists_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_artists_title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                    android:textColor="@color/light_gray"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_artist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:background="@color/black"
                    app:artists_items="@{artists}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:visible="@{ error == null }"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recent_artists_title"
                    tools:listitem="@layout/view_artist"/>

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progress_artists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    app:layout_constraintBottom_toBottomOf="@+id/recycler_artist"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/recycler_artist"
                    app:visible="@{loadingArtists}" />

                <TextView
                    android:id="@+id/recent_albums_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_albums_title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                    android:textColor="@color/light_gray"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_artist" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_albums"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:background="@color/black"
                    app:albums_items="@{albums}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:visible="@{ error == null }"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recent_albums_title"
                    tools:listitem="@layout/view_album" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progress_albums"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    app:layout_constraintBottom_toBottomOf="@+id/recycler_albums"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/recycler_albums"
                    app:visible="@{loadingAlbums}" />

                <TextView
                    android:id="@+id/release_albums_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
                    android:textColor="@color/light_gray"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_albums" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_releases"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:background="@color/black"
                    app:releases_items="@{releases}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:visible="@{ error == null }"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/release_albums_title"
                    tools:listitem="@layout/view_album" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@{error}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="?attr/colorError"
            app:visible="@{ error != null }" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>